# hexagonal-vm

./: pyproject.toml
app/: main.py  run.py  vm_agent.sh
app/api/: vm_router.py
app/domain/: vm_service.py
app/infrastructure/: database.py
app/infrastructure/repositories/: models.py  vm_repository.py
app/infrastructure/utils/: vm_utils.py
app/models/: vm_request.py
